Refactor reaction APIs around me endpoints
